# fmt-ext

./: Cargo.toml  LICENSE  README.md
examples/: custom_debug.rs  custom_display.rs
src/: carrier.rs  debug.rs  display.rs  lib.rs
