[package]
name = "fmt_ext"
version = "0.1.2"
edition = "2018"

authors = ["Ilya Venner ilyavenner@gmail.com"]
description = """
A simple interface for extending external types with custom implementations of `Debug` and
`Display` traits.
"""
readme = "README.md"
repository = "https://github.com/ilyavenner/fmt_ext"
keywords = ["fmt", "formatting", "extenstion"]
categories = ["development-tools", "value-formatting"]
license = "MIT"

[badges.maintenance]
status = "experimental"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
